--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -12,6 +12,10 @@ body{
   box-shadow: 0 1px 2px 0 rbga(34,86,38,.15);
 }
 
+.react-datepicker-wrapper{
+  width: 100%;
+}
+
 /*home page styles*/
 
 .masthead {
